--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -259,3 +260,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/venv,python,windows,macOS,linux
+
+# Ignore all CSV files
+*.csv
